--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,5 @@
-name: Action Workflow
+name: "Action Workflow"
+description: "This is the composite action"
 
 inputs:
   name:
@@ -10,7 +11,6 @@ runs:
   using: "composite"
   steps:
     - name: Print name
-      id: print-name
       run: |
         echo "Name: ${{ inputs.name }}"
       shell: bash
